# desktop-app

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: android-apk.yml  ios-ipa.yml
scripts/: generate-keystore.sh
src-tauri/: Cargo.toml  Info.ios.plist  android-audio-mode-settings.js  android-audio-workaround.js  android-download-init.js  discord-init.js  external-links.js  google-auth-init.js  ios-download-init.js  media-remote-init.js  mobile-download-init.js  mobile-gestures.js  safe-area-insets-android.js  source-url-settings.js  tauri-defineproperty-guard.js  tauri.conf.json
src-tauri/capabilities/: android-capability.json  desktop-capability.json  main-capability.json  mobile-capability.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: android-download.toml  open-external.toml  source-url.toml
src-tauri/scripts/android/: download_platform_adapter.js  safe_area_insets_bridge.js  swipe_gesture_config.js
src-tauri/scripts/ios/: download_platform_adapter.js
src-tauri/scripts/mobile/: download_interceptor.js  google_sign_in_bridge.js  media-remote-init.js  media_session_actions.js  sidebar_swipe_gestures.js  source_url_fallback.js
src-tauri/src/: android_download.rs  desktop.rs  lib.rs  main.rs  mobile.rs
src-tauri/src/mobile/: android.rs  ios.rs
