[package]
name = "Monochrome"
version = "0.1.0"
description = "Minimalist, Unlimited Music Streaming."
authors = ["Samidy", "Blacksigkill"]
edition = "2021"

[lib]
name = "monochrome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-media-toolkit = "0.1"
tauri-plugin-google-auth = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[features]
cargo-clippy = []

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
discord-rich-presence = "0.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
